· IdPath class for synchronization id paths